# grpc-boundary-lab

./: .dockerignore  .gitignore  .gitmodules  Dockerfile.backend  Dockerfile.gateway  Makefile  README.md  docker-compose.yml  go.mod  settings.gradle.kts  sonar-project.properties
.github/workflows/: ci.yml  deploy.yml  docs.yml  pipeline.yml
backend/: .dockerignore  Dockerfile.backend  Dockerfile.gateway  Makefile  architecture.md  bench-matrix.sh  coverage.html  go.mod  go.sum  matrix_results.txt  report.json
backend/deploy/: setup_gcp.sh
backend/gateway/: clients.go  gateway.go  gateway_test.go  rest.go
certs/: backend.crt  backend.key  ca.crt  ca.key  ca.srl  frontend.crt  frontend.key  gateway.crt  gateway.key  gen.sh
cmd/backend/: main.go
cmd/gateway/: main.go
cmd/loadgen/: main.go
deploy/: setup_gcp.sh
deploy/terraform/: backend.tf  main.tf
docs/: mkdocs.yml  pyproject.toml
docs/src/: future.md  index.md
docs/src/analysis/: gateway-overhead.md  scaling.md
docs/src/architecture/: request-flow.md  system.md
docs/src/experiments/: deadlines.md  loadgen.md  sweeps.md
frontend/: .dockerignore  Dockerfile  Makefile  README.md  architecture.md  coverage_output.txt  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  test-results.txt  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html  lcov.info
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
gateway/: gateway_test.go
internal/proto/: ping_grpc.pb.go
src/backend/: Dockerfile  build.gradle.kts
src/gateway/: Dockerfile  build.gradle.kts
(+111 files in other folders)
