[project]
name = "grpc-boundary-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Andreas Schubert",email = "andy.schubert@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[tool.poetry]
package-mode = false

[build-system]

requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.1,<10.0.0)",
    "pymdown-extensions (>=10.20.1,<11.0.0)",
    "mkdocs-mermaid2-plugin (>=1.2.3,<2.0.0)"
]
docs = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.1,<10.0.0)",
    "pymdown-extensions (>=10.20.1,<11.0.0)"
]
